--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -1,3 +1,43 @@
+[Senpais-Trains]
+NoName=[Senpais Trains] No Schedule Name
+NoScheduel=[Senpais Trains] Train without Schedule
+NoTrainOpen=[Senpais Trains] No Train open
+NoLineSelected=[Senpais Trains] No Line selected, cant delete
+TrainCounter=Train List
+Icon=Icon
+Count=Count
+ListAll=List All
+PlacedEntities=All Placed Entities of this Type
+BackerName=Backer Name
+PlayerKills=Player Kills
+ID=Unique Train ID
+Health=Health
+EditTrain=Edit Train
+Changes=Apply Changes
+Stations=Stations
+WagonCounter=Wagon List
+Load=Load
+FluidWagonCounter=Fluid Wagon List
+Fluid=Fluid
+NoFluid=No Fluid loaded
+Line=Line Management
+Signals=Signals
+NewLine=New Line
+AddLine=Add Line
+ElectricStates=Electric Trains States
+W=__1__W
+kJ=__1__kJ
+MJ=__1__MJ
+GJ=__1__GJ
+TJ=__1__TJ
+MW=__1__MW
+GW=__1__GW
+TP=Total Provider:
+TET=Total Electric Trains:
+TPNFT=Total Power needed for Trains:
+TPIP=Total Power in Providers:
+TPPCS=Total Power Provider can store:
+
 [entity-name]
 Battle-Wagon-1=Battle Cargo Wagon MK1
 Battle-Wagon-2=Battle Cargo Wagon MK2
@@ -51,26 +91,15 @@ Battle-Laser=Enable/Disable Battle Laser Turret
 Senpais-Electric-Train=Enable/Disable Electronic Train Standard
 Senpais-Power-Provider=Enable/Disable Electronic Train Power Provider
 Senpais-Electric-Train-Heavy=Enable/Disable Electronic Train Cargo
-braking-force-8=Enable/Disable Breaking Force Tech Tier 8
-braking-force-9=Enable/Disable Breaking Force Tech Tier 9
+braking-force-8=Enable/Disable Braking Force Tech Tier 8
+braking-force-9=Enable/Disable Braking Force Tech Tier 9
 Senpais-Dora=Enable/Disable German Railway Gun "Dora"
 Coupling=Enable/Disable Automatic Coupling
 Smarter-Trains=Enable/Disable Smarter Trains
 
 [mod-setting-description]
-Battle-Wagon-1=This needs be to enabled to have MK2/3 working!
-Battle-Wagon-2=This needs be to enabled to have MK3 working!
-Battle-Loco-1=This needs be to enabled to have MK2/3 working!
-Battle-Loco-2=This needs be to enabled to have MK3 working!
-Elec-Battle-Loco-1=This needs be to enabled to have MK2/3 working!
-Elec-Battle-Loco-2=This needs be to enabled to have MK3 working!
-Battle-Laser=Powerfull Laser Turrets!
-Senpais-Electric-Train=Needs to be enabled to have the Cargo Version working!
-Senpais-Power-Provider=Needs to be enabled to have Electronic Trains working!
-braking-force-8=Needs to be enabled to have Tier 9 working!
-Senpais-Dora=Unlock the Power of German Engineering!
 Smarter-Trains=Unlocks the possibilities to control the Train Schedule and next Station via Circuit Network!
 
 [virtual-signal-name]
-signal-couple=Signal Couple Rolling Stock
-signal-decouple=Signal Decouple Rolling Stock
+signal-couple=Couple Rolling Stock
+signal-decouple=Decouple Rolling Stock
