--- a/locale/de/de.cfg
+++ b/locale/de/de.cfg
@@ -2,7 +2,7 @@
 NoName=[Senpais Trains] Kein Fahrplanname
 NoScheduel=[Senpais Trains] Zug ohne Fahrplan
 NoTrainOpen=[Senpais Trains] Kein Zug offen
-NoLineSelected=[Senpais Trains] Keine Linie ausgewählt, löschen nicht möglich
+NoLineSelected=[Senpais Trains] Keine Linie ausgewählt
 TrainCounter=Zug Liste
 Icon=Symbol
 Count=Anzahl
