--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -2,7 +2,7 @@
 NoName=[Senpais Trains] No Schedule Name
 NoScheduel=[Senpais Trains] Train without Schedule
 NoTrainOpen=[Senpais Trains] No Train open
-NoLineSelected=[Senpais Trains] No Line selected, cant delete
+NoLineSelected=[Senpais Trains] No Line selected
 TrainCounter=Train List
 Icon=Icon
 Count=Count
